--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
+<script src="https://code.responsivevoice.org/responsivevoice.js?key=Sru5IhRU"></script>
     {% include meta.html %}
 
     <!--[if lt IE 9]>
