--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+      <script src="https://code.responsivevoice.org/responsivevoice.js?key=Sru5IhRU"></script>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
